# lux-antidetect

./: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.web.json
.github/workflows/: build-release.yml
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.ts
scripts/: generate-release-update-metadata.mjs
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/main/: ai.ts  api-server.ts  automation.ts  browser-manager.ts  browser.ts  crx.ts  db.ts  fingerprint-presets.ts  fingerprint.contract.test.ts  fingerprint.ts  geoip.ts  index.ts  ipc.ts  logger.ts  mcp-server.ts  models.ts  profile-health.ts  profile.ts  proxy.ts  sessions.ts  socks5-relay.ts  updater.ts
src/pages/: ProxiesPage.tsx
src/preload/: api-contract.ts  index.d.ts  index.ts  session-events.contract.test.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  index.css  main.tsx
src/renderer/src/components/: ColorPicker.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  KeyboardShortcutsHelp.tsx  Layout.tsx  NotificationCenter.tsx  RunningSessionsDock.tsx  ThemeEditor.tsx  Toast.tsx  UpdateNotification.tsx
src/renderer/src/hooks/: useGroupCollapsedState.ts  useReducedMotion.ts  useViewportWidth.ts
src/renderer/src/lib/: api.ts  features.ts  fingerprint-validator.ts  formatRelativeTime.ts  preset-menu.tsx  tags.ts  themes.ts  types.ts  ui.ts
src/renderer/src/pages/: AiPage.tsx  AutomationPage.tsx  (+4 more)
(+33 files in other folders)
