[package]
name = "lux-antidetect"
version = "0.1.0"
description = "Lux Antidetect Browser"
authors = ["you"]
edition = "2021"

[lib]
name = "lux_antidetect_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

